# AlexPetrucci_ICTPRG302

./: .gitignore  Asteroid.cpp  Asteroid.h  Bullet.cpp  Bullet.h  CMakeLists.txt  EndState.cpp  EndState.h  Game.cpp  Game.h  PauseState.cpp  PauseState.h  PlayState.cpp  PlayState.h  Player.cpp  Player.h  README.md  RNG.cpp  RNG.h  ResourceManager.cpp  ResourceManager.h  StartState.cpp  StartState.h  State.cpp  State.h  config.h  main.cpp  postBuild.bat  utils.cpp  utils.h
libs/SFML-2.6.0/: .gitignore
